[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Request/RequestSpawner.gd" type="Script" id=1]
[ext_resource path="res://Objects/Request/Request.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1920, 0, 0, 0, 0, 0, 1920, 1080, 0, 0, 0, 0, 0, 1080, 0, 0, 0, 0, 0, 0 )
}

[node name="RequestSpawner" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
request = ExtResource( 2 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="RequestPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnLocation" type="PathFollow2D" parent="RequestPath"]

